[gd_scene load_steps=11 format=2]

[ext_resource path="res://Level/BaseLevel.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Character/AutoPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tilemap/tilemap.tres" type="TileSet" id=4]
[ext_resource path="res://Level/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://Nodes/EndPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Nodes/Misc/Teleport.tscn" type="PackedScene" id=7]
[ext_resource path="res://Nodes/Misc/DeathEffect.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Audio/level-done.wav" type="AudioStream" id=9]

[sub_resource type="Environment" id=1]
ambient_light_energy = 0.5

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 1 )
teleport = ExtResource( 7 )
death_effect = ExtResource( 8 )

[node name="Layer1" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Layer2" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Hazard" type="TileMap" parent="." groups=[
"damage",
]]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 12
collision_mask = 0
format = 1

[node name="Layer3" type="TileMap" parent="."]
z_index = 2
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Loot" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="Player" parent="Players" instance=ExtResource( 2 )]

[node name="AutoPlayer" parent="Players" instance=ExtResource( 3 )]

[node name="Buttons" type="Node2D" parent="."]

[node name="Mechanisms" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="EndPoint" parent="." instance=ExtResource( 6 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 5 )

[node name="Hitpause" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="LevelComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="TextLayer" type="CanvasLayer" parent="."]
[connection signal="death" from="Players/Player" to="." method="_on_Player_death"]
[connection signal="death" from="Players/AutoPlayer" to="." method="_on_AutoPlayer_death"]
[connection signal="entered" from="EndPoint" to="." method="_on_EndPoint_entered"]
[connection signal="timeout" from="Hitpause" to="." method="_on_Hitpause_timeout"]
